# hydromt_imod

./: README.rst  pyproject.toml
envs/: hydromt-imod.yml
examples/: example_imod.ini  test_create_model_api.py
hydromt_imod/: __init__.py  imod.py  utils.py
hydromt_imod/data/imod/: imod.run
hydromt_imod/workflows/: __init__.py  basemaps.py
